Add DatePickerFragment TaskFragment: Add date button to launch date picker, add result code to receive result from datepicker fragment DatePickerFragment: Add datepicker, launched by task fragment with an intent that contains the arguments for the date sent from the task fragment Resources:add layouts for datepicker and datepicker fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">SimpleToDo</string>
     <string name="delete_task">Delete Task</string>
+    <string name="date_picker_title">Due Date for Task:</string>
 </resources>
