Add dialog for timepicker TaskFragment: Add mMasterDate to keep a global date that is used to update time/date. Add temporary button to launch dialog. Add request code for timepicker fragment. Manage onActivityResult with switch Resources: Add layouts for timepicker

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">SimpleToDo</string>
     <string name="delete_task">Delete Task</string>
     <string name="date_picker_title">Due Date for Task:</string>
+    <string name="time_picker_title">Time Task is Due:</string>
 </resources>
