--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">SimpleToDo</string>
+    <string name="new_task_toolbar_title">New Task</string>
     <string name="delete_task">Delete Task</string>
     <string name="date_picker_title">Due Date for Task:</string>
     <string name="time_picker_title">Time Task is Due:</string>
