--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="edit_task_toolbar_title">Edit Task</string>
     <string name="save_button_label">Save</string>
     <string name="delete_task">Delete Task</string>
-    <string name="delete_swipe">Delete</string>
     <string name="date_picker_title">Due Date for Task:</string>
     <string name="time_picker_title">Time Task is Due:</string>
+    <string name="undo_snack_label">Task has been deleted</string>
+    <string name="undo_snack_action">Undo</string>
 </resources>
