--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="date_picker_title">Due Date for Task:</string>
     <string name="time_picker_title">Time Task is Due:</string>
     <string name="undo_snack_label">Task has been deleted</string>
+    <string name="draft_snack_label">Your draft was not saved!</string>
+    <string name="draft_snack_action">Save</string>
     <string name="undo_snack_action">Undo</string>
 </resources>
