--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="draft_snack_action">Save</string>
     <string name="undo_snack_action">Undo</string>
     <string name="dark_mode">Enable Dark Mode</string>
-    <string name="recycler_placeholder">You currently have no tasks available.</string>
+    <string name="recycler_placeholder">You currently have no tasks.</string>
 </resources>
