--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,6 @@
     <string name="draft_snack_label">Your draft was not saved!</string>
     <string name="draft_snack_action">Save</string>
     <string name="undo_snack_action">Undo</string>
-    <string name="dark_mode">Enable Dark Mode</string>
+    <string name="dark_mode">Alternate Day/Night Mode</string>
     <string name="recycler_placeholder">You currently have no tasks.</string>
 </resources>
