Here we go add notifications and fire them using workmanager NotificationID: singleton class to increment notification ID by 1 NotificationWorker: worker class for notifications builds a notification based on task title Task: Change isTaskComplete to isRemindersEnabled TaskFragment: Enable/disable switch for cardview with reminder content. Implement creatework method that creates a onetime unique workrequest. A unique tag is given based on the title. set initial delay for notification based on date entered by user TaskListFragment: cancel work on snackbar dismissed README: updated Resources: add small drawable for notification and place reminder contents inside cardview layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="undo_snack_action">Undo</string>
     <string name="dark_mode">Alternate Day/Night Mode</string>
     <string name="recycler_placeholder">You currently have no tasks.</string>
+    <string name="reminder_switch">Set Reminder</string>
 </resources>
