Bulk commit of backup and restore support and dialog customization BackupRestoreFragment: Create a dialog fragment for backup and restore DatePickerFragment: change dialog style to custom one and remove title TimePickerFragment: change dialog style to custom and remove title TaskDatabase: Add public string for database name TaskFragment: Change date and time textviews to buttons TaskListFragment: Add backup and restore to toolbar and launch fragment when pressed Resources: add backup and restore layout, add custom theme for dialogs, round corners, change textviews to buttons AndroidManifest: add permissions for read and write external storage for backup and restore

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,9 @@
     <string name="dark_mode">Alternate Day/Night Mode</string>
     <string name="recycler_placeholder">You currently have no tasks.</string>
     <string name="reminder_switch">Set Reminder</string>
+    <string name="backup_restore_sub">Backup and Restore Menu</string>
+    <string name="backup_restore_dialog_title">Backup and Restore</string>
+    <string name="backup_button_label">Backup</string>
+    <string name="restore_button_label">Restore</string>
+    <string name="task_list_title">My Tasks</string>
 </resources>
