--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="edit_task_toolbar_title">Edit Task</string>
     <string name="save_button_label">Save</string>
     <string name="delete_task">Delete Task</string>
-    <string name="date_picker_title">Due Date for Task:</string>
-    <string name="time_picker_title">Time Task is Due:</string>
+    <string name="date_picker_title">Due Date for Task</string>
+    <string name="time_picker_title">Time Task is Due</string>
     <string name="undo_snack_label">Task has been deleted</string>
     <string name="draft_snack_label">Your draft was not saved!</string>
     <string name="draft_snack_action">Save</string>
@@ -13,9 +13,10 @@
     <string name="dark_mode">Alternate Day/Night Mode</string>
     <string name="recycler_placeholder">You currently have no tasks.</string>
     <string name="reminder_switch">Set Reminder</string>
-    <string name="backup_restore_sub">Backup and Restore Menu</string>
     <string name="backup_restore_dialog_title">Backup and Restore</string>
     <string name="backup_button_label">Backup</string>
     <string name="restore_button_label">Restore</string>
     <string name="task_list_title">My Tasks</string>
+    <string name="details_hint">Description</string>
+    <string name="title_hint">Title</string>
 </resources>
